2006-02-01 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/Makefile.am (AM_CPPFLAGS):
	Added top-level gtkglext builddir to include path.

2006-01-29 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/player.cpp
	(main(int, char *[])): boost::thread_group manages the lifetime of
	created threads; eliminated use of boost::scoped_ptr for this.

2006-01-29 Braden McDaniel  <braden@endoframe.com>

	Use g_io_channel_get_buffer_condition instead of select/FD_ISSET.

	* mozilla-plugin/src/openvrml.cpp
	(request_data_available(GIOChannel *, GIOCondition, gpointer)):
	Use g_io_channel_get_buffer_condition instead of select/FD_ISSET.
	* mozilla-plugin/src/openvrml-player/command_istream.cpp
	(command_data_available(GIOChannel *, GIOCondition, gpointer)):
	Use g_io_channel_get_buffer_condition instead of select/FD_ISSET.

2006-01-28 Braden McDaniel  <braden@endoframe.com>

	Launch the child openvrml-player process using
	g_spawn_async_with_pipes instead of fork/exec.  Use the child
	process' stdin and stdout for the command and request channels,
	respectively, instead of specifying file descriptors for these on
	the command line.

	* mozilla-plugin/src/openvrml.cpp (PluginInstance): Removed
	player_pid, out_pipe, in_pipe members; added command_channel
	member.  Removed in() and out() member functions; added
	WriteCommand(const std::string &) member function.
	(NPP_NewStream(NPP, NPMIMEType, NPStream *, NPBool, uint16 *)):
	Delegate writing to the command channel to
	PluginInstance::WriteCommand(const std::string &).
	(NPP_DestroyStream(NPP, NPStream *, NPError)): Delegate writing to
	the command channel to PluginInstance::WriteCommand(const
	std::string &).
	(NPP_Write(NPP, NPStream *, int32, int32, void *)): Delegate
	writing to the command channel to
	PluginInstance::WriteCommand(const std::string &).
	(PluginInstance::PluginInstance(NPP)): Removed initialization of
	player_pid, out_pipe, in_pipe.